--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -29,7 +29,7 @@ of the translation system.
 In the analysis of the results presented in Section \ref{sec:exp:results}, we
 try to connect the separate worlds of \ac{nat} research and the bids to improve
 the efficiency of translation models. Our student models outperform all of the
-\ac{nar} models in terms of BLEU on the standard \acs{wmt}~14 translation
+\ac{nar} models in terms of \acs{bleu} on the standard \acs{wmt}~14 translation
 benchmark. However, at the same time the models score relatively poorly in
 comparison to the current state-of-the-art \ac{ar} translation models, which
 suggests that the gap in translation quality between \ac{ar} and \ac{nar}
@@ -453,7 +453,7 @@ human evaluation, despite achieving reasonable \acs{bleu} scores.
 % \JH{We observe... gaps everywhere, AR clearly better in translation. relatively
 %   small gaps in ChrF scores, moderate gaps in bleu, large gaps in COMET which
 %   could suggest that NAR systems will rank poorly in human evaluation even
-%   though they achieve high BLEU scores.}
+%   though they achieve high \acs{bleu} scores.}
 
 The results on the test set confirm the ranking of the \acs{nar} models as seen
 during training (see Figures \ref{fig:ende-learning-curves} and
