--- a/thesis/img/noam/noam.tex
+++ b/thesis/img/noam/noam.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Thu 11 Nov 2021 08:28:32 PM GMT
+%% Fri 12 Nov 2021 12:59:18 AM GMT
 \path (0.000,0.000) rectangle (11.500,6.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -44,7 +44,7 @@
 \node[gp node right,rotate=45] at (10.947,1.013) {100k};
 \draw[gp path] (2.056,5.691)--(2.056,1.197)--(10.947,1.197)--(10.947,5.691)--cycle;
 \node[gp node center,rotate=-270] at (0.108,3.444) {Learning rate $\alpha$};
-\node[gp node center] at (6.409,0.215) {Training step};
+\node[gp node center] at (6.317,0.0) {Training step};
 \node[gp node right] at (10.031,5.280) {$d=512$, $w=8000$};
 \gpcolor{rgb color={0.800,0.000,0.000}}
 \gpsetlinewidth{2.50}
