--- a/thesis/img/throughputs/cpu-shortlist.tex
+++ b/thesis/img/throughputs/cpu-shortlist.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Wed 10 Nov 2021 01:51:08 PM GMT
+%% Thu 11 Nov 2021 09:32:00 PM GMT
 \path (0.000,0.000) rectangle (13.500,8.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -61,7 +61,14 @@
 \gpcolor{rgb color={0.200,0.200,0.200}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.215,7.280)--(12.579,7.280);
+\draw[gp path] (6.205,7.691)--(6.618,7.059)--(8.201,5.875)--(9.783,5.296)--(11.365,5.064)%
+  --(12.947,5.039);
 \gpsetpointsize{4.00}
+\gppoint{gp mark 1}{(6.618,7.059)}
+\gppoint{gp mark 1}{(8.201,5.875)}
+\gppoint{gp mark 1}{(9.783,5.296)}
+\gppoint{gp mark 1}{(11.365,5.064)}
+\gppoint{gp mark 1}{(12.947,5.039)}
 \gppoint{gp mark 1}{(12.397,7.280)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,6.818) {\acs{ar} Base};
