--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -157,8 +157,8 @@
   |---------+----------------------------+------------------------|
   | Model   | Latency - CPU 1 Core (x10) | Latency - CPU 36 cores |
   |---------+----------------------------+------------------------|
-  | AR Big  |                            |                        |
-  | AR Base |                            |                  52087 |
+  | AR Big  |                            |                  52087 |
+  | AR Base |                            |                        |
   |---------+----------------------------+------------------------|
   | Large   |                      35013 |                  14542 |
   | Base    |                       9463 |                   3508 |
@@ -190,8 +190,8 @@
     |---------+-------+-------+-------+-------+-------+------+------+------|
     | Batch   |     1 |     2 |     4 |     8 |    16 |   32 |   64 |  128 |
     |---------+-------+-------+-------+-------+-------+------+------+------|
-    | AR Big  |       |       |       |       | 10939 | 9651 | 9124 | 9067 |
-    | AR Base |       | 27977 | 18914 | 13597 | 10946 | 9643 | 9154 | 9090 |
+    | AR Big  |       | 27977 | 18914 | 13597 | 10946 | 9643 | 9154 | 9090 |
+    | AR Base |       |       |       |       |       |      |      | 2587 |
     |---------+-------+-------+-------+-------+-------+------+------+------|
     | Large   | 12799 |  9870 |  8245 |  7545 |  7434 | 7511 | 7639 |      |
     | Base    |  2549 |  2298 |  2263 |  2306 |  2399 | 2503 | 2609 | 2707 |
@@ -203,14 +203,14 @@
 **** Export
 
     | Batch | AR Big | AR Base | Large | Base | Small | Micro | Tiny |
-    |     1 |        |   41168 | 12799 | 2549 |  1346 |   958 |  244 |
-    |     2 |        |   27977 |  9870 | 2298 |  1246 |   897 |  246 |
-    |     4 |        |   18914 |  8245 | 2263 |  1250 |   913 |  273 |
-    |     8 |        |   13597 |  7545 | 2306 |  1306 |   974 |  316 |
-    |    16 |  10939 |   10946 |  7434 | 2399 |  1399 |  1062 |  373 |
-    |    32 |   9643 |    9643 |  7511 | 2503 |  1497 |  1163 |  437 |
-    |    64 |   9124 |    9154 |  7639 | 2609 |  1606 |  1271 |  506 |
-    |   128 |   9067 |         |       | 2707 |  1714 |  1380 |  582 |
+    |     1 |  41168 |         | 12799 | 2549 |  1346 |   958 |  244 |
+    |     2 |  27977 |         |  9870 | 2298 |  1246 |   897 |  246 |
+    |     4 |  18914 |         |  8245 | 2263 |  1250 |   913 |  273 |
+    |     8 |  13597 |         |  7545 | 2306 |  1306 |   974 |  316 |
+    |    16 |  10946 |         |  7434 | 2399 |  1399 |  1062 |  373 |
+    |    32 |   9643 |         |  7511 | 2503 |  1497 |  1163 |  437 |
+    |    64 |   9154 |         |  7639 | 2609 |  1606 |  1271 |  506 |
+    |   128 |   9090 |         |       | 2707 |  1714 |  1380 |  582 |
 
 
 
