--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -772,7 +772,7 @@ Table \ref{tab:exp:cpu} shows
     \toprule
     Batch size & 1 & 2 & 4 & 8 & 16 & 32 & 64 & 128 \\
     \midrule
-    \acs{ar} -- Large &&  &  &  &  &  & & \\
+    \acs{ar} -- Large &&  & 19,001 & 13,586 & 10,939 & 9,651 & 9,124 & 9,067 \\
     \acs{ar} -- Base  &&  & 18,914 & 13,597 & 10,946 & 9,643 & 9,154 & \\
     \midrule
     Large & 12,799 & 9,870 & 8,245 & 7,545 & 7,434 & 7,511 & 7,639 & \\
