--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,48 @@
+@article{haddow2021survey,
+  title={Survey of Low-Resource Machine Translation},
+  author={Haddow, Barry and Bawden, Rachel and Barone, Antonio Valerio Miceli and Helcl, Jind{\v{r}}ich and Birch, Alexandra},
+  journal={arXiv preprint arXiv:2109.00486},
+  year={2021}
+}
+@book{goodfellow2016deep,
+  title={Deep learning},
+  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  year={2016},
+  publisher={MIT press}
+}
+@article{dostert1955georgetown,
+  title={The Georgetown-{IBM} Experiment},
+  author={Dostert, Leon E},
+  journal={1955). Machine translation of languages. John Wiley \& Sons, New York},
+  pages={124--135},
+  year={1955}
+}
+@article{dupont2017cryptological,
+author = {Dupont, Quinn},
+year = {2017},
+month = {01},
+pages = {},
+title = {The Cryptological Origins of Machine Translation, from al-Kindi to Weaver},
+journal = {amodern}
+}
+
+@article{shannon1948mathematical,
+  title={A mathematical theory of communication},
+  author={Shannon, Claude Elwood},
+  journal={The Bell system technical journal},
+  volume={27},
+  number={3},
+  pages={379--423},
+  year={1948},
+  publisher={Nokia Bell Labs}
+}
+@article{nagao1984framework,
+  title={A framework of a mechanical translation between Japanese and English by analogy principle},
+  author={Nagao, Makoto},
+  journal={Artificial and human intelligence},
+  pages={351--354},
+  year={1984}
+}
 @inproceedings{libovicky2018solving,
   title={Solving Three Czech NLP Tasks with End-to-end Neural Models.},
   author={Libovick{\`y}, Jindrich and Rosa, Rudolf and Helcl, Jindrich and Popel, Martin},
@@ -118,6 +163,20 @@
       eprint={2106.05093},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
+}
+
+@article{turing1950computing,
+    author = {Turing, A. M.},
+    title = "{Computing Machinery and Intelligence}",
+    journal = {Mind},
+    volume = {LIX},
+    number = {236},
+    pages = {433-460},
+    year = {1950},
+    month = {10},
+    issn = {0026-4423},
+    doi = {10.1093/mind/LIX.236.433},
+    url = {https://doi.org/10.1093/mind/LIX.236.433},
 }
 
 @inproceedings{chen-etal-2021-university,
